fixing monte carlo