@@ -9,6 +9,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.math.MathContext;
 import java.math.RoundingMode;
 import java.util.*;
 
@@ -26,8 +27,15 @@ public class MonteCarloEngine {
     private static final BigDecimal ONE = BigDecimal.ONE;
     private static final int SCALE = 8;
 
-    private static final List<Double> DEFAULT_PERCENTILE_LEVELS =
-            List.of(0.05, 0.10, 0.25, 0.50, 0.75, 0.90, 0.95);
+    /**
+     * Default percentile levels stored as exact BigDecimal to avoid floating-point issues
+     * in deduplication and key generation.
+     */
+    private static final List<BigDecimal> DEFAULT_PERCENTILE_LEVELS = List.of(
+            new BigDecimal("0.05"), new BigDecimal("0.10"), new BigDecimal("0.25"),
+            new BigDecimal("0.50"), new BigDecimal("0.75"), new BigDecimal("0.90"),
+            new BigDecimal("0.95")
+    );
 
     // ── Public types ──────────────────────────────────────────────────────────
 
@@ -35,6 +43,10 @@ public class MonteCarloEngine {
      * Normalised per-trade return: realizedPnlAmount / backtestInitialCapital.
      * Stored as a fraction (e.g., 0.01 = 1% of original backtest capital).
      * Used directly in compounding: equity *= (1 + normalizedReturn).
+     *
+     * NOTE: This assumes fixed-fractional sizing relative to original backtest capital.
+     * If the backtest used compounding (trade sizes grew with equity), returns from later
+     * trades will be over-stated and earlier trades under-stated proportionally.
      */
     public record TradeReturnSample(BigDecimal normalizedReturn, boolean win) {}
 
@@ -83,22 +95,34 @@ public class MonteCarloEngine {
 
     // ── Main simulation entry point ────────────────────────────────────────────
 
+    /**
+     * @param backtestInitialCapital The original backtest capital — used solely for scaling
+     *                               source trade statistics in the response. Keeps the "mean
+     *                               trade PnL" figures relative to the actual historical account
+     *                               rather than the (potentially different) MC capital.
+     */
     public MonteCarloResponse run(
             List<TradeReturnSample> samples,
             MonteCarloRequest request,
             BigDecimal initialCapital,
             long effectiveSeed,
             UUID monteCarloRunId,
-            UUID backtestRunId
+            UUID backtestRunId,
+            BigDecimal backtestInitialCapital
     ) {
+        if (samples == null || samples.isEmpty()) {
+            throw new IllegalArgumentException("samples must not be null or empty");
+        }
+
         int n = request.getNumberOfSimulations();
 
         BigDecimal ruinFloor = initialCapital
                 .multiply(ONE.subtract(request.getRuinThresholdPct().divide(HUNDRED, 12, RoundingMode.HALF_UP)))
                 .setScale(SCALE, RoundingMode.HALF_UP);
 
-        // Generate deterministic per-path seeds from the effective seed.
-        // This allows any individual path to be replayed exactly (e.g., for curve capture).
+        // Generate deterministic per-path seeds from the effective seed using SplittableRandom.
+        // SplittableRandom has better statistical independence between streams than java.util.Random
+        // (which uses a 48-bit LCG prone to correlation between differently-seeded instances).
         SplittableRandom seeder = new SplittableRandom(effectiveSeed);
         long[] pathSeeds = new long[n];
         for (int i = 0; i < n; i++) {
@@ -108,7 +132,8 @@ public class MonteCarloEngine {
         // ── First pass: all paths, no equity curve storage ────────────────────
         List<PathResult> results = new ArrayList<>(n);
         for (int i = 0; i < n; i++) {
-            List<TradeReturnSample> sample = buildPathSample(samples, request, new Random(pathSeeds[i]));
+            SplittableRandom rng = new SplittableRandom(pathSeeds[i]);
+            List<TradeReturnSample> sample = buildPathSample(samples, request, rng);
             results.add(simulatePath(i, pathSeeds[i], sample, initialCapital, ruinFloor,
                     request.getMaxAcceptableDrawdownPct(), false));
         }
@@ -118,7 +143,8 @@ public class MonteCarloEngine {
                 .sorted(Comparator.comparing(PathResult::finalEquity))
                 .toList();
 
-        PathResult worstResult  = byEquity.get(0);
+        PathResult worstResult  = byEquity.getFirst();
+        // For even n, n/2 selects the upper of the two middle elements (slightly above median).
         PathResult medianResult = byEquity.get(n / 2);
         PathResult bestResult   = byEquity.get(n - 1);
 
@@ -148,9 +174,11 @@ public class MonteCarloEngine {
 
         BigDecimal nd = BigDecimal.valueOf(n);
 
-        // ── Source trade statistics (in MC initial capital units) ─────────────
+        // ── Source trade statistics (always in original backtest capital units) ──
+        // Uses backtestInitialCapital, not MC initialCapital, so stats reflect
+        // the actual historical trade sizes regardless of any MC capital override.
         List<BigDecimal> absReturns = samples.stream()
-                .map(s -> s.normalizedReturn().multiply(initialCapital).setScale(SCALE, RoundingMode.HALF_UP))
+                .map(s -> s.normalizedReturn().multiply(backtestInitialCapital).setScale(SCALE, RoundingMode.HALF_UP))
                 .sorted()
                 .toList();
 
@@ -182,12 +210,12 @@ public class MonteCarloEngine {
                 .sourceWinRate(sourceWinRate)
                 .meanFinalEquity(mean(sortedEquities))
                 .medianFinalEquity(percentile(sortedEquities, 0.50))
-                .minFinalEquity(sortedEquities.get(0))
+                .minFinalEquity(sortedEquities.getFirst())
                 .maxFinalEquity(sortedEquities.get(n - 1))
                 .finalEquityPercentiles(percentileMap)
                 .meanTotalReturnPct(mean(sortedReturns))
                 .medianTotalReturnPct(percentile(sortedReturns, 0.50))
-                .minTotalReturnPct(sortedReturns.get(0))
+                .minTotalReturnPct(sortedReturns.getFirst())
                 .maxTotalReturnPct(sortedReturns.get(n - 1))
                 .meanMaxDrawdownPct(mean(sortedDrawdowns))
                 .medianMaxDrawdownPct(percentile(sortedDrawdowns, 0.50))
@@ -209,15 +237,16 @@ public class MonteCarloEngine {
     private List<TradeReturnSample> buildPathSample(
             List<TradeReturnSample> source,
             MonteCarloRequest request,
-            Random rng
+            SplittableRandom rng
     ) {
         Integer horizon = request.getHorizonTrades();
 
         if (request.getSimulationMode() == MonteCarloSimulationMode.TRADE_SEQUENCE_SHUFFLE) {
             List<TradeReturnSample> shuffled = new ArrayList<>(source);
-            Collections.shuffle(shuffled, rng);
+            shuffleInPlace(shuffled, rng);
             if (horizon != null && horizon < shuffled.size()) {
-                return shuffled.subList(0, horizon);
+                // Return a copy, not a subList view, to avoid accidental mutation of shuffled.
+                return new ArrayList<>(shuffled.subList(0, horizon));
             }
             return shuffled;
         }
@@ -229,6 +258,19 @@ public class MonteCarloEngine {
             sample.add(source.get(rng.nextInt(source.size())));
         }
         return sample;
+    }
+
+    /**
+     * Fisher-Yates in-place shuffle using SplittableRandom.
+     * Avoids java.util.Collections.shuffle which requires java.util.Random (48-bit LCG).
+     */
+    private void shuffleInPlace(List<TradeReturnSample> list, SplittableRandom rng) {
+        for (int i = list.size() - 1; i > 0; i--) {
+            int j = rng.nextInt(i + 1);
+            TradeReturnSample tmp = list.get(i);
+            list.set(i, list.get(j));
+            list.set(j, tmp);
+        }
     }
 
     // ── Core path simulation ──────────────────────────────────────────────────
@@ -252,12 +294,22 @@ public class MonteCarloEngine {
         if (captureEquityCurve) curve.add(equity);
 
         for (TradeReturnSample trade : trades) {
-            // Compounding: equity scales by (1 + normalizedReturn)
+            // Compounding: equity scales by (1 + normalizedReturn).
             // Floored at zero — a real account cannot go negative.
             equity = equity
                     .multiply(ONE.add(trade.normalizedReturn()))
                     .max(ZERO)
                     .setScale(SCALE, RoundingMode.HALF_UP);
+
+            // Early termination: once equity is exactly zero, all subsequent trades
+            // produce 0 * (1+r) = 0 forever ("zombie path"). Stop here — the account
+            // is blown out and there is nothing left to simulate.
+            if (equity.compareTo(ZERO) == 0) {
+                ruinBreached = true;
+                maxDrawdownPct = HUNDRED;
+                if (captureEquityCurve) curve.add(equity);
+                break;
+            }
 
             if (equity.compareTo(peakEquity) > 0) {
                 peakEquity = equity;
@@ -304,7 +356,8 @@ public class MonteCarloEngine {
             BigDecimal ruinFloor
     ) {
         // Reproduce the exact same path by replaying with the same per-path seed.
-        List<TradeReturnSample> sample = buildPathSample(samples, request, new Random(result.seed()));
+        SplittableRandom rng = new SplittableRandom(result.seed());
+        List<TradeReturnSample> sample = buildPathSample(samples, request, rng);
         PathResult withCurve = simulatePath(result.index(), result.seed(), sample,
                 initialCapital, ruinFloor, request.getMaxAcceptableDrawdownPct(), true);
 
@@ -322,25 +375,45 @@ public class MonteCarloEngine {
 
     // ── Statistics helpers ─────────────────────────────────────────────────────
 
+    /**
+     * Builds the percentile map from a sorted list of values.
+     *
+     * Deduplication uses BigDecimal natural ordering (exact equality) to avoid
+     * floating-point collisions that Double.distinct() would introduce.
+     *
+     * Keys use plain percentage format: 0.05 → "P5", 0.051 → "P5.1", 0.25 → "P25".
+     * This ensures two levels that differ in value always produce different keys.
+     */
     private Map<String, BigDecimal> buildPercentileMap(
             List<BigDecimal> sortedValues,
             List<BigDecimal> customLevels
     ) {
-        List<Double> levels = new ArrayList<>(DEFAULT_PERCENTILE_LEVELS);
+        // Use TreeSet<BigDecimal> for exact deduplication and natural sort order.
+        TreeSet<BigDecimal> levelSet = new TreeSet<>(DEFAULT_PERCENTILE_LEVELS);
         if (customLevels != null) {
             customLevels.stream()
-                    .mapToDouble(BigDecimal::doubleValue)
-                    .filter(p -> p > 0.0 && p < 1.0)
-                    .forEach(levels::add);
+                    .filter(p -> p != null
+                            && p.compareTo(BigDecimal.ZERO) > 0
+                            && p.compareTo(BigDecimal.ONE) < 0)
+                    .forEach(levelSet::add);
         }
 
         Map<String, BigDecimal> map = new LinkedHashMap<>();
-        levels.stream()
-                .distinct()
-                .sorted()
-                .forEach(p -> map.put("P" + (int) Math.round(p * 100), percentile(sortedValues, p)));
-
+        for (BigDecimal level : levelSet) {
+            String key = percentileKey(level);
+            map.put(key, percentile(sortedValues, level.doubleValue()));
+        }
         return map;
+    }
+
+    /**
+     * Converts a fractional percentile level to a map key.
+     * 0.05 → "P5", 0.10 → "P10", 0.251 → "P25.1"
+     * stripTrailingZeros() + toPlainString() avoids both "P5.0" and "P5E+1" forms.
+     */
+    private String percentileKey(BigDecimal level) {
+        BigDecimal pct = level.multiply(HUNDRED).stripTrailingZeros();
+        return "P" + pct.toPlainString();
     }
 
     /**
@@ -373,14 +446,16 @@ public class MonteCarloEngine {
 
     /**
      * Sample standard deviation (Bessel's correction: n-1 denominator).
+     * Uses BigDecimal.sqrt(MathContext) to avoid double precision overflow on
+     * large portfolio values where variance.doubleValue() could return Infinity.
      */
     private BigDecimal stdDev(List<BigDecimal> values, BigDecimal mean) {
         if (values.size() < 2) return ZERO;
         BigDecimal variance = values.stream()
                 .map(v -> v.subtract(mean).pow(2))
                 .reduce(ZERO, BigDecimal::add)
-                .divide(BigDecimal.valueOf(values.size() - 1), 10, RoundingMode.HALF_UP);
-        return BigDecimal.valueOf(Math.sqrt(variance.doubleValue()))
+                .divide(BigDecimal.valueOf(values.size() - 1), SCALE + 2, RoundingMode.HALF_UP);
+        return variance.sqrt(new MathContext(SCALE + 2, RoundingMode.HALF_UP))
                 .setScale(SCALE, RoundingMode.HALF_UP);
     }
 }
